# KipCLImo

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-17-multi-discipline-onboarding.md
docs/superpowers/specs/: 2026-03-17-multi-discipline-onboarding-design.md
garmin_cli/: __init__.py  auth.py  cache.py  cli.py  client.py  config.py  errors.py  output.py  schema.py  skill_install.py  state.py  utils.py
garmin_cli/commands/: __init__.py  activity.py  auth_cmds.py  body.py  common.py  config_cmds.py  gear.py  general.py  heart.py  recovery.py  sleep.py  training.py
scripts/: install_skill.py  setup-cron.sh
skills/garmin-coach/: SKILL.md
skills/garmin-coach/references/: cli.md  cycling.md  goals.md  gym.md  metrics.md  morning-brief.md  running.md  weekly-report.md
tests/: conftest.py  test_auth.py  test_cache.py  test_cli.py  test_client.py  test_config.py  test_config_cmds.py  test_output.py  test_skill_install.py
